# litterbox

./: .gitmodules  ARCHITECTURE.md  Cargo.toml  LitterboxDiagram.drawio  README.md  SECURITY.md  example.Dockerfile  install.sh  installer.sh
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  installer.yml  make-release.yml  publish-installer.yml  publish-website.yml  tag-on-version-change.yml
ask-agent/: Cargo.toml
ask-agent/src/: main.rs
lbx-init/src/commands/: entrypoint.rs
litterbox/: Cargo.toml
litterbox/src/: agent.rs  daemon.rs  devices.rs  entrypoint.rs  env.rs  errors.rs  files.rs  keys.rs  main.rs  podman.rs  sandbox.rs  settings.rs  tumbleweed.Dockerfile  ubuntu-latest.Dockerfile
litterbox/src/commands/: confirm.rs  define.rs  enter.rs  entrypoint.rs  wait.rs
litterbox/src/commands/keys/: export.rs  mod.rs
litterbox/templates/: cachyos.Dockerfile  tumbleweed.Dockerfile  ubuntu-latest.Dockerfile
names/: Cargo.toml  README.md
names/src/: lib.rs
src/: ask-agent.rs  main.rs
website/: .gitignore  config.toml  package.json  pnpm-lock.yaml  wrangler.toml
website/content/: _index.md
website/sass/: hr.scss
website/static/: install.sh
website/templates/shortcodes/: include.html  svg.html
