[package]
name = "ask-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui_extras = { version="0.33", features=["svg"] }
env_logger = "0.11"
futures = "0.3"
nix = { version = "0.30", features = ["process"] }
russh = "0.54"
russh-cryptovec = "0.52"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
