[package]
name = "litterbox"
version = "0.1.0"
edition = "2024"
default-run = "litterbox"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
names = { path = "../names" }
serde_json = "1.0"
tabled = "0.20"
inquire = "0.9"
inquire-derive = "0.9"
russh = "0.54"
ron = "0.11"
argon2 = "0.5"
env_logger = "0.11.8"
log = "0.4.28"
